--- a/fyi21-cy1/slides/6-1.md
+++ b/fyi21-cy1/slides/6-1.md
@@ -1,7 +1,7 @@
 # Our Goal this Week (Week 6)
 
 - You Can Design Pretty Web Interfaces with TailwindCSS
-- You Can Write Javascript Code, Functions & Variables 💃🏿💃🏿🥳
+- You Can Write Javascript Code: Functions & Variables 💃🏿💃🏿🥳
 - Your Team Will Showcase V2 of MSIMBO Website (Completes Sprint 3)
 
 ----
