adds the syllabus updates

--- a/fyi21-cy1/slides/15-1.md
+++ b/fyi21-cy1/slides/15-1.md
@@ -1,6 +1,8 @@
+---
+marp: true
+---
 
-
-## Week 15 Goal: Digging into React 
+## Week 15 Goal: Digging into React / Components
 
 ---
 
@@ -8,11 +10,13 @@
 
 ### Kickstart Sprint 9 💪🏿
 
+#### Work on "Paper Prototype" of Capstone
+
 ---
 
 ## Kudos
 
-### @All — Nice presentations
+### All — Nice presentations
 
 ----
 
